testsuite/tests/deriving/should_fail/Roles8.hs
{-# LANGUAGE RoleAnnotations, GADTs #-}

module Roles8 where

data T1 a@P = K1 a
